# ValmerConnectors

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
dashboards/sample_app/: app.py
scripts/: test_script.py  update_interest_rates.py  update_tiie_zero_curve.py  update_vector_valmer.py
src/: settings.py
src/data_nodes/: nodes.py
src/instruments/: rates_curves.py  vector_to_asset.py
